--- a/origin/index.html
+++ b/origin/index.html
@@ -5,7 +5,7 @@
     <title>基础</title>
 </head>
 <body>
-<button></button>
+<div>hello</div>
 <script src="tool.js"></script>
 <script src="index.js"></script>
 </body>
