--- a/origin/index.html
+++ b/origin/index.html
@@ -4,31 +4,16 @@
     <meta charset="UTF-8">
     <title>基础</title>
     <style>
-        .item {
-            background: #FFF;
-            border: 1px solid #666;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
 
-        #sentinel {
-            width: 1px;
-            height: 1px;
-        }
-
-        #scroller {
-            height: 400px;
-            overflow-y: scroll;
-        }
     </style>
 </head>
 <body>
 <div>hello</div>
+<button class="file">选择文件</button>
+<button class="directory">选择目录</button>
+<button class="write">写入文件</button>
 <ul></ul>
 <div class=""></div>
-<script src="tool.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
