移动端自适应

--- a/ant-react/public/index.html
+++ b/ant-react/public/index.html
@@ -29,6 +29,26 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      (function (doc, win) {
+        var docEl = doc.documentElement,
+                resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+                recalc = function () {
+                  var clientWidth = docEl.clientWidth;
+                  console.log('c w', clientWidth)
+                  if (!clientWidth) return;
+                  if(clientWidth>=640){
+                    docEl.style.fontSize = '100px';
+                  }else{
+                    docEl.style.fontSize = 100 * (clientWidth / 1040) + 'px';
+                  }
+                };
+
+        if (!doc.addEventListener) return;
+        win.addEventListener(resizeEvt, recalc, false);
+        doc.addEventListener('DOMContentLoaded', recalc, false);
+      })(document, window);
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
