--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <style>
         h1 {
             font-size: 160px;
+             background: -webkit-linear-gradient(#eee, #333);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
         }
     </style>
 </head>
