--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <style>
         h1 {
             font-size: 160px;
-             background: -webkit-linear-gradient(#eee, #333);
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;
+            background: -webkit-linear-gradient(#4CA1AF, #C4E0E5);
         }
     </style>
 </head>
